trying to fix the overlapping section

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -247,33 +247,40 @@ height: 3.125rem;
 
   /* --------- Image with Overlapping message ------- */
 .overlap-container {
+  width: 100%;
   height: auto;
-  margin-left: 10%;
+  margin-bottom: 1rem;
 }
 
 .overlap-wrapper {
   position: relative;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .image-overlap img {
-  display: block;
-  width: 41.5rem;
-  height: 43rem; 
+  position: absolute;
+  top: 0;
+  left: 0;
   padding-bottom: 3%;
 }
 
 .overlap-context {
+  display: flex;
+  width: 50%;
+  bottom: 0;
+  margin-left: 20%;
   position: absolute;
   padding-left: 5rem;
   padding-right: 3rem;
-  padding-top: 3rem;
-  width: 32.625rem;
-  height: 29.25rem; /* Would be 32rem but minus 3rem from padding-top */
-  top: 65%; 
-  left: 50%; 
-  transform: translate(-50%, -50%);
-  z-index: 1; 
-  background: #E2D294;
+  height: 50%;
+  z-index: 1;
+  background: #e2d294;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: flex-start;
 }
 
 .overlap-title {
@@ -635,6 +642,7 @@ height: 3.125rem;
   align-items: flex-start;
   align-content: center;
   flex-wrap: wrap;
+  padding-bottom: 2.12rem;
 }
 
 .recipe-title,
@@ -663,6 +671,7 @@ height: 3.125rem;
   font-style: normal;
   font-weight: 400;
   line-height: 1.875rem; /* 187.5% */
+  padding-bottom: 2rem;
 }
 
 .ingredient-block > li::marker {
